<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setStatus"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/statusRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/status"
            android:textSize="24sp"
            android:typeface="normal" />

        <RadioButton
            android:id="@+id/availableRadioButton"
            android:tag="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:checked="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/status_available"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/respondingRadioButton"
            android:tag="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/status_responding"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/onSceneRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:tag="3"
            android:text="@string/status_on_scene"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/blockedRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:tag="4"
            android:text="@string/status_blocked"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/unavailableRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:tag="5"
            android:text="@string/status_unavailable"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/doNotDisturbRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:tag="6"
            android:text="@string/status_do_not_disturb"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/setStatusButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/status_button"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

</LinearLayout>
